# YATTR

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.single  README.en.md  README.md  docker-compose.remote.yml  docker-compose.single.yml  docker-compose.yml  tasks.md
.github/workflows/: docker-publish.yml  release-on-tag.yml
backend/: Dockerfile  app_factory.py  auth_routes.py  auth_service.py  cache_assets.py  cleanup.py  config.py  db.py  dependencies.py  feed_settings.py  fetcher.py  main.py  models.py  network_safety.py  plugin_loader.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rules.py  scheduler.py  schemas.py  security.py  services.py  static_mounts.py  text_extract.py
backend/api/: debug.py  entries.py  filters.py  folders.py  opml.py  settings.py  system.py
backend/plugins/fever/: plugin.py
backend/tests/: test_api.py  test_units.py
docs/: development.en.md  development.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AppContainer.tsx  api.ts  i18n.tsx  main.tsx  router.tsx  styles.css  vite-env.d.ts
frontend/src/__tests__/: App.test.tsx  api.test.ts  auth.test.tsx  main.test.tsx
frontend/src/app/: constants.ts  dialogTypes.ts  types.ts  useAppDataQueries.ts  useAppEffects.ts  useEntryAndSearchActions.ts  useManagementActions.ts  utils.ts  viewHelpers.ts
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/components/: ui.tsx
frontend/src/components/app/: AppView.tsx  (+9 more)
frontend/src/pages/: LoginPage.tsx
